# cphoto

./: CMakeLists.txt
.cache/clangd/index/: framebuffer.c.9180A3ECD1483AD7.idx  framebuffer.h.09A1E4B530959904.idx  main.c.E5DDDB6EF2EC9E71.idx  numeric.h.ADFC773ACFDC0BB1.idx  object.h.BBA44FCE6A567DDC.idx  ray.c.48026DA2F4F21987.idx  ray.h.F85774439F2DCEB8.idx
include/cphoto/: framebuffer.h  numeric.h  object.h  ray.h
source/: framebuffer.c  main.c  ray.c
